# ignition-lint

./: .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .pylintrc  .python-version  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASING.md  action.yml  pyproject.toml  requirements.txt
.config/: .pylintrc
.github/: pull_request_template.md  renovate.json
.github/workflows/: ci.yml  deploy-docs.yml  integration-action-test.yml  integration-condition-test.yml  integration-test.yml  issue-14-test.yml  prepare-release.yml  repo-lint.yml  unittest.yml  validation-test.yml
docker/: docker-compose.yaml
docs/: README.md  rule-organization-guide.md  v0.3.0-implementation-notes.md
documentation/: .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
documentation/docs/: intro.md  tutorial.md
documentation/docs/developing/: api-reference.md  architecture.md  creating-rules.md  testing-rules.md  troubleshooting.md
documentation/docs/getting-started/: configuration.md  installation.md  quick-start.md
documentation/docs/reference/naming/: name-pattern.md
documentation/docs/reference/performance/: polling-interval.md
documentation/docs/usage/: cli.md  debug-output.md  github-actions.md  pre-commit.md  whitelist.md
documentation/scripts/: copy-changelog.js
documentation/src/css/: custom.css
src/: checker.py  ignition-lint.py  ignition_lint.py  lint-ignition-views.py
src/ignition_lint/: cli.py
src/ignition_lint/rules/: __init__.py  registry.py
tests/: test_checker.py  test_ignition_lint.py
tests/cases/PascalCase/: resource.json  view.json
tests/cases/PreferredStyle/: resource.json  view.json
tests/cases/Space Case/: view.json
tests/cases/Title Case/: resource.json  view.json
tests/cases/UPPER_CASE/: resource.json  view.json
tests/cases/camelCase/: resource.json  view.json
tests/cases/kebab-case/: resource.json  view.json
tests/cases/script-confirmation/: resource.json  view.json
tests/cases/snake_case/: view.json
tests/integration/: view.json
tests/integration/good/: view.json
tests/unit/: test_batch_cleanup.py  test_example_mixed_severity.py  test_pylint_trailing_whitespace_fix.py  test_rule_registration.py
tests/views/: bad_script_view.json
(+16 files in other folders)
