[tool.poetry]
name = "ign-lint"
version = "0.5.1"
description = "A linter for Ignition JSON files"
authors = ["Alex Spyksma", "Eric Knorr"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bw-design-group/ignition-lint"
packages = [
    { include = "ignition_lint", from = "src" }
]

keywords = [
    "ignition",
    "perspective",
    "linting",
    "json",
    "scada",
    "quality-assurance",
    "static-analysis"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pylint = "*"

[tool.poetry.group.dev.dependencies]
# Development and testing dependencies
yapf = "*"
pre-commit = "^4.2.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.scripts]
ign-lint = "ignition_lint.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
