[tool.poetry]
name = "ignition-lint"
version = "0.1.0"
description = "A linter for Ignition JSON files"
authors = ["Eric Knorr", "Alex Spyksma"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/design-group/ignition-lint"
packages = [{ include = "ignition_lint", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
pylint = "*"
ignition-api-stubs = "^8.1.48.post1"
pre-commit = "^4.2.0"

[tool.poetry.group.dev.dependencies]
# Development and testing dependencies
yapf = "*"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.scripts]
ignition-lint = "ignition_lint.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
